--- a/app/views/factory/admin/product_taxons/_form.html.erb
+++ b/app/views/factory/admin/product_taxons/_form.html.erb
@@ -2,4 +2,5 @@
 <%= f.collection_select :parent_id, @product_taxons, :id, :name, include_blank: true if @product_taxons.present? %>
 <%= f.text_field :name %>
 <%= f.file_field :logo %>
+<%= f.file_field :logo_color %>
 <%= f.collection_select :scene_id, @scenes, :id, :title if @scenes.present? %>
