--- a/app/views/factory/productions/nav.html+phone.erb
+++ b/app/views/factory/productions/nav.html+phone.erb
@@ -9,7 +9,7 @@
   data-controller="page"
   data-page-debug-value="true"
   data-action="touchmove->page#move:passive"
-  class="weui-panel is-borderless weui-panel_access mt-0 weui-flex__item"
+  class="weui-panel is-box is-borderless weui-panel_access mt-0 weui-flex__item"
   style="height: 100%"
 >
   <div class="weui-panel__bd is-flex is-flex-direction-column is-flex-grow-1" style="height: 100%">
