--- a/app/views/factory/productions/_base/_production.html+phone.erb
+++ b/app/views/factory/productions/_base/_production.html+phone.erb
@@ -1,4 +1,4 @@
-<div class="weui-media-box weui-media-box_appmsg" data-controller="common" id="production_<%= model.id %>">
+<div class="weui-media-box is-box weui-media-box_appmsg" data-controller="common" id="production_<%= model.id %>">
   <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, data: { controller: 'empty' }, class: 'weui-media-box__hd as-logo') do %>
     <%= image_tag model.product.logo, class: 'weui-media-box__thumb' if model.product.logo.attached? %>
   <% end %>
