--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -14,7 +14,7 @@
     class="weui-panel is-borderless weui-panel_access mt-0 weui-flex__item"
     style="height: 100%"
   >
-    <div class="weui-panel__bd is-flex is-flex-direction-column is-flex-grow-1" style="height: 100%">
+    <div class="weui-panel__bd is-flex is-flex-direction-column is-flex-grow-1" style="height: 100%; background: transparent">
       <%= render partial: 'production', collection: @productions, as: :model, locals: { item_con: 'trade/my/items' } %>
       <% if @productions.blank? %>
         <%= render 'blank' %>
