--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -11,21 +11,20 @@
     data-controller="page"
     data-page-debug-value="true"
     data-action="touchmove->page#move:passive"
-    class="weui-menu-content weui-flex__item"
+    class="weui-menu-content"
     style="height: 100%; background: transparent"
   >
-    <div class="weui-panel__bd is-flex is-flex-direction-column is-flex-grow-1" style="height: 100%; background: transparent">
-      <%= render partial: 'production', collection: @productions, as: :model, locals: { item_con: 'trade/my/items' } %>
-      <% if @productions.blank? %>
-        <%= render 'blank' %>
-      <% elsif @productions.total_pages <= @productions.current_page %>
-        <%= render 'no_more' %>
-      <% elsif @productions.total_pages > @productions.current_page %>
-        <%= render 'loading' %>
-        <%= render 'tip' %>
-      <% end %>
-    </div>
+    <%= render partial: 'production', collection: @productions, as: :model, locals: { item_con: 'trade/my/items' } %>
+    <% if @productions.blank? %>
+      <%= render 'blank' %>
+    <% elsif @productions.total_pages <= @productions.current_page %>
+      <%= render 'no_more' %>
+    <% elsif @productions.total_pages > @productions.current_page %>
+      <%= render 'loading' %>
+      <%= render 'tip' %>
+    <% end %>
     <%= render 'paginator' %>
+
   </div>
 </div>
 
