--- a/app/views/factory/productions/_base/_production.html+phone.erb
+++ b/app/views/factory/productions/_base/_production.html+phone.erb
@@ -16,27 +16,38 @@
         <% end %>
       <% end %>
     </ul>
-    <div class="has-block-space-between py-1">
-      <div class="has-inline-centered">
-        <span class="has-text-danger"><%= model.price.to_money.format.html_safe %></span>
-        <% r = model.card_price_min(@cart) %>
-        <% if r.present? %>
-        <div class="tags has-addons is-price control m-0 ml-2">
-          <% if r[:checked] %>
-            <div class="tag is-danger">
-              <i class="fa-solid fa-badge-check"></i>
-              <span style="padding-left: 1px"><%= r[:name] %></span>
-            </div>
-          <% else %>
-            <div class="tag is-success"><%= r[:name] %></div>
-          <% end %>
-          <div class="tag is-light"><%= r[:price].to_money.format.html_safe %></div>
+    <% r = model.card_price_min(@cart) %>
+    <% if r.present? %>
+      <% if r[:checked] %>
+      <p><span class="has-text-grey"><%= model.price.to_money.format.html_safe %></span></p>
+      <div class="has-block-space-between pb-1">
+        <div class="has-inline-centered">
+          <div class="tags has-addons is-price control m-0">
+            <div class="tag is-light has-text-danger"><%= r[:price].to_money.format.html_safe %></div>
+            <% if r[:checked] %>
+              <div class="tag is-danger">
+                <span style="padding-left: 1px"><%= r[:name] %></span>
+                <i class="fa-solid fa-badge-check"></i>
+              </div>
+            <% else %>
+              <div class="tag is-success"><%= r[:name] %></div>
+            <% end %>
+          </div>
         </div>
-        <% end %>
+        <div class="is-flex">
+          <%= render partial: 'cart', locals: { model: model, item_con: item_con } %>
+        </div>
       </div>
-      <div class="is-flex">
-        <%= render partial: 'cart', locals: { model: model, item_con: item_con } %>
+      <% end %>
+    <% else %>
+      <div class="has-block-space-between py-1">
+        <div class="has-inline-centered">
+          <span class="has-text-danger"><%= model.price.to_money.format.html_safe %></span>
+        </div>
+        <div class="is-flex">
+          <%= render partial: 'cart', locals: { model: model, item_con: item_con } %>
+        </div>
       </div>
-    </div>
+    <% end %>
   </div>
 </div>
