--- a/app/views/factory/productions/_base/_production.html+phone.erb
+++ b/app/views/factory/productions/_base/_production.html+phone.erb
@@ -24,20 +24,27 @@
         <div class="has-inline-centered">
           <div class="tags has-addons is-price control m-0">
             <div class="tag is-light has-text-danger"><%= r[:price].to_money.format.html_safe %></div>
-            <% if r[:checked] %>
-              <div class="tag is-danger">
-                <span style="padding-left: 1px"><%= r[:name] %></span>
-                <i class="fa-solid fa-badge-check"></i>
-              </div>
-            <% else %>
-              <div class="tag is-success"><%= r[:name] %></div>
-            <% end %>
+            <div class="tag is-danger">
+              <span style="padding-left: 1px"><%= r[:name] %></span>
+              <i class="fa-solid fa-badge-check"></i>
+            </div>
           </div>
         </div>
         <div class="is-flex">
           <%= render partial: 'cart', locals: { model: model, item_con: item_con } %>
         </div>
       </div>
+      <% else %>
+        <div class="tags has-addons is-price control m-0">
+          <div class="tag is-light has-text-danger"><%= r[:price].to_money.format.html_safe %></div>
+          <div class="tag is-success"><%= r[:name] %></div>
+        </div>
+        <div class="has-block-space-between pb-1">
+          <div class="has-inline-centered has-text-danger"><%= model.price.to_money.format.html_safe %></div>
+          <div class="is-flex">
+            <%= render partial: 'cart', locals: { model: model, item_con: item_con } %>
+          </div>
+        </div>
       <% end %>
     <% else %>
       <div class="has-block-space-between py-1">
