--- a/app/views/factory/in/productions/index.html+phone.erb
+++ b/app/views/factory/in/productions/index.html+phone.erb
@@ -1,14 +1,13 @@
 <%= render 'top_bar' %>
 <%= render 'filter_form' %>
 
-<div class="weui-flex is-align-items-flex-start is-flex-grow-1">
+<div class="weui-menu">
   <%= render 'menu' unless @produce_plan %>
   <div
     data-controller="page"
     data-page-debug-value="true"
     data-action="touchmove->page#move:passive"
-    class="weui-panel is-borderless weui-panel_access mt-0 weui-flex__item"
-    style="height: 100%"
+    class="weui-menu-content"
   >
     <div class="weui-panel__bd is-flex is-flex-direction-column is-flex-grow-1" style="height: 100%">
       <%= render partial: 'production', collection: @productions, as: :model, locals: { item_con: 'trade/mem/items' } %>
