--- a/app/views/factory/produce_plans/_overview/_scene.html.erb
+++ b/app/views/factory/produce_plans/_overview/_scene.html.erb
@@ -1,4 +1,4 @@
-<div class="weui-panel">
+<div class="weui-panel is-box">
   <div class="weui-panel__hd">
     <div class="level is-flex is-justify-content-space-between">
       <div class="level-left is-several">
