--- a/app/views/factory/scenes/show.html.erb
+++ b/app/views/factory/scenes/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'top_bar' %>
 
-<div class="weui-panel">
+<div class="weui-panel is-box">
   <div class="weui-panel__hd">
     <div class="is-several">
       <%= image_tag @scene.logo, class: 'image is-32x32' if @scene.logo.attached? %>
