--- a/app/views/application/_menu_carts.html.erb
+++ b/app/views/application/_menu_carts.html.erb
@@ -3,8 +3,6 @@
     <span class="tag is-danger">全部商品</span>
   </div>
   <div class="weui-panel__bd">
-    <div class="columns is-mobile">
-      <%= render partial: 'menu_item_production', collection: Factory::Production.default_where(default_params).default.limit(5), as: :model %>
-    </div>
+    <%= render partial: 'production', collection: Factory::Production.default_where(default_params).default.limit(5), as: :model, locals: { item_con: 'trade/my/items' } %>
   </div>
 </div>
