--- a/app/views/factory/productions/nav.html+phone.erb
+++ b/app/views/factory/productions/nav.html+phone.erb
@@ -9,20 +9,17 @@
   data-controller="page"
   data-page-debug-value="true"
   data-action="touchmove->page#move:passive"
-  class="weui-panel is-box is-borderless weui-panel_access mt-0 weui-flex__item"
-  style="height: 100%"
+  class="weui-menu-content"
 >
-  <div class="weui-panel__bd is-flex is-flex-direction-column is-flex-grow-1" style="height: 100%">
-    <%= render partial: 'production', collection: @productions, as: :model, locals: { item_con: 'trade/my/items' } %>
-    <% if @productions.blank? %>
-      <%= render 'blank' %>
-    <% elsif @productions.total_pages <= @productions.current_page %>
-      <%= render 'no_more' %>
-    <% elsif @productions.total_pages > @productions.current_page %>
-      <%= render 'loading' %>
-      <%= render 'tip' %>
-    <% end %>
-  </div>
+  <%= render partial: 'production', collection: @productions, as: :model, locals: { item_con: 'trade/my/items' } %>
+  <% if @productions.blank? %>
+    <%= render 'blank' %>
+  <% elsif @productions.total_pages <= @productions.current_page %>
+    <%= render 'no_more' %>
+  <% elsif @productions.total_pages > @productions.current_page %>
+    <%= render 'loading' %>
+    <%= render 'tip' %>
+  <% end %>
   <%= render 'paginator' %>
 </div>
 
