--- a/app/views/factory/productions/_base/_cart.html.erb
+++ b/app/views/factory/productions/_base/_cart.html.erb
@@ -32,6 +32,6 @@
   <%= f.hidden_field :station_id, value: params[:station_id] %>
   <%= f.hidden_field :desk_id, value: params[:desk_id] %>
   <%= button_tag do %>
-    <i class="fa-solid fa-circle-plus fa-xl has-text-dark-grey"></i>
+    <i class="fa-solid fa-cart-plus fa-xl has-text-primary"></i>
   <% end %>
 <% end unless item %>
