--- a/app/views/factory/productions/_base/_cart.html.erb
+++ b/app/views/factory/productions/_base/_cart.html.erb
@@ -12,7 +12,7 @@
 <% end if item && item.number <= 1 %>
 <%= form_with(theme: nil, scope: 'item', url: { controller: item_con, action: 'update', id: item.id }, method: :patch, state: 'redirect_return', data: { controller: 'input', turbo_scroll: true }) do |f| %>
   <%= f.hidden_field :current_cart_id, value: @cart.id %>
-  <%= f.number_field :number, value: item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
+  <%= f.number_field :number, value: item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 2.5em; height: 100%' %>
 <% end if item %>
 <%= form_with theme: nil, scope: :item, url: { controller: item_con, action: 'update', id: item.id }, method: :patch, state: 'redirect_return', class: 'button_to', data: { turbo_scroll: true } do |f| %>
   <%= f.hidden_field :number, value: item.number + 1 %>
