--- a/app/views/factory/productions/_show/_share.html.erb
+++ b/app/views/factory/productions/_show/_share.html.erb
@@ -1,21 +1,15 @@
-<div class="weui-panel is-borderless mt-0 mx-3">
-  <div class="weui-panel__bd">
-    <div class="weui-cells">
-      <div
-        class="weui-cell weui-cell_active weui-cell_access"
-        data-controller="mask wx-share"
-        data-mask-id-value="mask"
-        data-wx-share-title-value="<%= @production.name %>"
-        data-wx-share-desc-value="<%= @production.product.description %>>"
-        data-wx-share-link-value="<%= url_for(controller: '/factory/productions', action: 'show', id: @production.id, only_path: false) %>"
-        data-wx-share-image-value="<%= @production.logo.url %>"
-        data-action="click->mask#show click->wx-share#ready"
-      >
-        <div class="weui-cell__bd weui-cell_primary">分享好友/发个朋友圈</div>
-        <div class="weui-cell__ft"></div>
-      </div>
-    </div>
-  </div>
+<div
+  class="button"
+  data-controller="mask wx-share"
+  data-mask-id-value="mask"
+  data-wx-share-title-value="<%= @production.name %>"
+  data-wx-share-desc-value="<%= @production.product.description %>>"
+  data-wx-share-link-value="<%= url_for(controller: '/factory/productions', action: 'show', id: @production.id, only_path: false) %>"
+  data-wx-share-image-value="<%= @production.logo.url %>"
+  data-action="click->mask#show click->wx-share#ready"
+>
+  <%= image_tag 'wx_moment.svg', class: 'image is-16x16' %>
+  <span class="">分享</span>
 </div>
 <div
   data-controller="mask"
