--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -1,11 +1,15 @@
 <div class="columns is-mobile has-border-top is-safe-bottom m-0" style="z-index: 500">
-  <div class="column is-half is-flex is-justify-content-center is-align-items-center">
+  <div class="column is-one-third is-flex is-justify-content-center is-align-items-center">
     <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items' } %>
   </div>
-  <div class="column is-half">
+  <div class="column is-one-third">
     <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'button is-danger') do %>
       <i class="fa-solid fa-cart-shopping"></i>
       <span class="pl-1"><%= t('trade.my.carts.show.title') %></span>
     <% end if @cart %>
+
+  </div>
+  <div class="column is-one-third">
+    <%= render 'share' %>
   </div>
 </div>
