--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -7,5 +7,25 @@
     <i class="fa-solid fa-cart-shopping"></i>
     <span class="pl-1"><%= t('trade.my.carts.show.title') %></span>
   <% end if @cart %>
-  <%= render 'share' %>
+  <div
+    class="button is-light"
+    data-controller="mask wx-share"
+    data-mask-id-value="mask"
+    data-wx-share-title-value="<%= @production.name %>"
+    data-wx-share-desc-value="<%= @production.product.description %>>"
+    data-wx-share-link-value="<%= url_for(controller: '/factory/productions', action: 'show', id: @production.id, only_path: false) %>"
+    data-wx-share-image-value="<%= @production.logo.url %>"
+    data-action="click->mask#show click->wx-share#ready"
+  >
+    <%= image_tag 'wx_moment.svg', class: 'image is-16x16' %>
+    <span class="pl-1">分享</span>
+  </div>
+</div>
+<div
+  data-controller="mask"
+  data-action="click->mask#close"
+  class="weui-mask weui-mask-share"
+  id="mask"
+  style="display: none"
+>
 </div>
