--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="has-block-space-around has-border-top is-safe-bottom m-0 py-3" style="z-index: 500">
+<div class="has-block-space-around has-background-grey-lighter is-safe-bottom m-0 py-3" style="z-index: 500">
   <div class="is-flex is-justify-content-center is-align-items-center">
     <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items' } %>
   </div>
