--- a/app/views/factory/productions/_base/_tab_bar_cart.html.erb
+++ b/app/views/factory/productions/_base/_tab_bar_cart.html.erb
@@ -12,7 +12,7 @@
   <div class="level-right mt-0 pr-4">
     <div class="level-item">
       <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'button is-small is-primary is-radius') do %>
-        <span>去购物车</span>
+        <span class="pr-1">去购物车</span>
         <i class="fa-solid fa-angle-right"></i>
       <% end %>
     </div>
