--- a/app/views/factory/in/productions/_index/_cart.html.erb
+++ b/app/views/factory/in/productions/_index/_cart.html.erb
@@ -26,7 +26,7 @@
 </div>
 <% end %>
 
-<%= form_with theme: nil, scope: 'item', url: { controller: 'trade/in/items', action: 'create' }, state: 'redirect_return', class: 'ml-1 button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: 'trade/in/items', action: 'create' }, state: 'redirect_return', class: 'ml-1 button_to' do |f| %>
   <%= f.hidden_field :current_cart_id, value: @cart.id %>
   <%= f.hidden_field :good_type, value: model.class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
