--- a/app/views/factory/in/productions/_index/_cart.html.erb
+++ b/app/views/factory/in/productions/_index/_cart.html.erb
@@ -2,21 +2,21 @@
 
 <% if item %>
 <div class="is-flex is-justify-content-center">
-  <%= form_with theme: nil, scope: 'item', url: { controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', class: 'ml-1 button_to' do |f| %>
+  <%= form_with theme: nil, scope: 'item', url: { controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', data: { turbo_scroll: true }, class: 'ml-1 button_to' do |f| %>
     <%= f.hidden_field :current_cart_id, value: @cart.id %>
     <%= f.hidden_field :number, value: item.number - 1 %>
     <%= button_tag do %>
       <i class="fa-solid fa-xl fa-circle-minus has-text-grey"></i>
     <% end %>
   <% end if item.number > 1 %>
-  <%= button_to({ controller: 'trade/in/items', action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart.id }, state: 'redirect_return', class: 'mr-1') do %>
+  <%= button_to({ controller: 'trade/in/items', action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart.id }, state: 'redirect_return', data: { turbo_scroll: true }, class: 'mr-1') do %>
     <i class="fa-solid fa-xl fa-circle-minus has-text-grey"></i>
   <% end if item.number <= 1 %>
-  <%= form_with theme: nil, scope: 'item', url: { controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', data: { controller: 'input' }, class: 'ml-1' do |f| %>
+  <%= form_with theme: nil, scope: 'item', url: { controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', data: { controller: 'input', turbo_scroll: true }, class: 'ml-1' do |f| %>
     <%= f.hidden_field :current_cart_id, value: @cart.id %>
     <%= f.number_field :number, value: item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
   <% end %>
-  <%= form_with theme: nil, scope: 'item', url: { controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', class: 'ml-1 button_to' do |f| %>
+  <%= form_with theme: nil, scope: 'item', url: { controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, state: 'redirect_return', data: { turbo_scroll: true }, class: 'ml-1 button_to' do |f| %>
     <%= f.hidden_field :current_cart_id, value: @cart.id %>
     <%= f.hidden_field :number, value: item.number + 1 %>
     <%= button_tag do %>
@@ -26,7 +26,7 @@
 </div>
 <% end %>
 
-<%= form_with theme: nil, url: { controller: 'trade/in/items', action: 'create' }, state: 'redirect_return', class: 'ml-1 button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: 'trade/in/items', action: 'create' }, state: 'redirect_return', data: { turbo_scroll: true }, class: 'ml-1 button_to' do |f| %>
   <%= f.hidden_field :current_cart_id, value: @cart.id %>
   <%= f.hidden_field :good_type, value: model.class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
