--- a/app/views/factory/admin/productions/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_thead.html.erb
@@ -7,7 +7,10 @@
   <p><%= Factory::Production.human_attribute_name(:price) %></p>
 </th>
 <th><%= Factory::Production.human_attribute_name(:card_price) %></th>
-<th><%= Factory::Production.human_attribute_name(:default) %></th>
+<th>
+  <p><%= Factory::Production.human_attribute_name(:default) %></p>
+  <p><%= Factory::Production.human_attribute_name(:presell) %></p>
+</th>
 <th>
   <p><%= Factory::Production.human_attribute_name(:enabled) %></p>
   <p><%= Factory::Production.human_attribute_name(:automatic) %></p>
