--- a/app/views/factory/admin/productions/_taxon/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_taxon/_index_tbody.html.erb
@@ -46,6 +46,12 @@
 </td>
 <td>
   <%= form_with theme: nil, model: model, scope: :production, url: { action: 'update', id: model.id, product_id: model.product_id }, data: { controller: 'input' } do |f| %>
+    <%= f.check_box :presell, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
+    <label data-action="click->input#check"></label>
+  <% end %>
+</td>
+<td>
+  <%= form_with theme: nil, model: model, scope: :production, url: { action: 'update', id: model.id, product_id: model.product_id }, data: { controller: 'input' } do |f| %>
     <%= f.check_box :enabled, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
     <label data-action="click->input#check"></label>
   <% end %>
