--- a/app/views/factory/productions/nav.html+phone.erb
+++ b/app/views/factory/productions/nav.html+phone.erb
@@ -2,7 +2,11 @@
   <%= render 'top_bar' %>
 <% end %>
 
-<%= render 'station' if params[:station_id].present? || params[:desk_id].present? %>
+<% if params[:station_id].present? %>
+  <%= render 'space_station' %>
+<% elsif params[:desk_id].present? %>
+  <%= render 'space_desk' %>
+<% end %>
 
 <%= render 'filter_form' %>
 <div
