--- a/app/views/factory/productions/nav.html+phone.erb
+++ b/app/views/factory/productions/nav.html+phone.erb
@@ -13,7 +13,7 @@
   data-controller="page"
   data-page-debug-value="true"
   data-action="touchmove->page#move:passive"
-  class="weui-menu-content"
+  class="weui-menu-content nav-production"
 >
   <%= render partial: 'production', collection: @productions, as: :model, locals: { item_con: 'trade/my/items' } %>
   <% if @productions.blank? %>
