--- a/app/views/factory/productions/_base/_brothers.html.erb
+++ b/app/views/factory/productions/_base/_brothers.html.erb
@@ -2,7 +2,7 @@
   <div class="weui-panel__hd">其他型号</div>
   <div class="weui-panel__bd">
     <div class="p-4 buttons are-small" data-controller="custom" data-custom-only-value="<%# product_part_taxon.only_one? %>">
-    <% @production.brothers.each do |brother| %>
+    <% @production.brothers.enabled.each do |brother| %>
       <%= link_to({ id: brother.id }, data: { turbo_scroll: true }, class: active_helper(id: brother.id, item: 'button', active: 'button is-primary')) do %>
         <span><%= brother.name %></span>
         <span class="pl-2"><%= brother.price.to_money.format.html_safe %></span>
