--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -48,7 +48,7 @@
     <%= render partial: 'product_part_taxon', locals: { part_taxon: part_taxon, parts: parts } %>
   <% end %>
   </div>
-<% elsif @production.brothers.count > 1 %>
+<% elsif @production.brothers.enabled.count > 1 %>
   <%= render 'brothers' %>
 <% end %>
 
