--- a/app/views/factory/admin/productions/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_thead.html.erb
@@ -1,5 +1,6 @@
 <th colspan="2">
   <p><%= Factory::Production.human_attribute_name(:name) %></p>
+  <p><%= Factory::Production.human_attribute_name(:title) %></p>
 </th>
 <th class="has-text-right">
   <p><%= Factory::Production.human_attribute_name(:cost_price) %></p>
