--- a/app/views/factory/admin/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html.erb
@@ -3,6 +3,7 @@
     <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
     <span><%= model.name %></span>
   </div>
+  <p class="has-text-grey"><%= model.title %></p>
 </td>
 <td class="has-inner-table">
   <% model.parts.each do |part| %>
