show protc title

--- a/app/views/application/_production.html+phone.erb
+++ b/app/views/application/_production.html+phone.erb
@@ -5,7 +5,7 @@
   <div class="weui-media-box__bd as-body">
     <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, state: 'enter', class: 'weui-media-box__title') do %>
       <% if model.product.brand %><span class="tag is-light is-danger"><%= model.product.brand&.name %></span><% end %>
-      <span><%= model.name %></span>
+      <span><%= model.title %></span>
     <% end %>
     <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, state: 'enter', class: 'weui-media-box__desc pt-1') do %>
       <%= model.product.description %>
