--- a/app/views/factory/admin/products/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html.erb
@@ -10,6 +10,7 @@
       </span>
     <% end %>
   </div>
+  <p class="has-text-grey"><%= model.description.truncate(27) %></p>
 </td>
 <td>
   <p><%= model.brand&.name %></p>
