--- a/app/views/factory/admin/products/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index/_index_thead.html.erb
@@ -1,8 +1,11 @@
 <th>
-  <span><%= Factory::Product.human_attribute_name(:name) %></span>
-  <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, data: { turbo_frame: 'modal' }, aria: { label: '默认图片' }) do %>
-    <i class="fa-solid fa-cog"></i>
-  <% end %>
+  <p>
+    <span><%= Factory::Product.human_attribute_name(:name) %></span>
+    <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, data: { turbo_frame: 'modal' }, aria: { label: '默认图片' }) do %>
+      <i class="fa-solid fa-cog"></i>
+    <% end %>
+  </p>
+  <p><%= Factory::Product.human_attribute_name(:description) %></p>
 </th>
 <th>
   <p><%= Factory::Product.human_attribute_name(:brand_id) %></p>
