--- a/app/views/factory/productions/_show/_breadcrumb.html+phone.erb
+++ b/app/views/factory/productions/_show/_breadcrumb.html+phone.erb
@@ -3,7 +3,7 @@
     <%= link_to({ action: 'index', product_taxon_id: @production.product_taxon_id }, state: 'return', class: 'px-4') do %>
       <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
     <% end %>
-    <div class="weui-title"><%= @production.name %></div>
+    <div class="weui-title"><%= @production.title %></div>
     <i style="width: 3rem"></i>
   </div>
 </div>
