--- a/app/views/factory/in/product_taxons/_base/_production.html.erb
+++ b/app/views/factory/in/product_taxons/_base/_production.html.erb
@@ -30,7 +30,7 @@
   <td></td>
   <td>
     <%= link_to({ controller: 'productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-solid fa-circle-info has-text-primary"></i>
+      <i class="fa-solid fa-circle-info has-text-info"></i>
     <% end %>
   </td>
 </tr>
