--- a/app/views/factory/admin/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tr.html.erb
@@ -22,7 +22,7 @@
       </div>
       <div class="mt-2">
         <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-          <i class="fa-solid fa-circle-info has-text-primary"></i>
+          <i class="fa-solid fa-circle-info has-text-info"></i>
         <% end %>
         <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal', turbo_scroll: true }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
           <i class="fa-solid fa-pencil has-text-info"></i>
