--- a/app/views/factory/admin/trade_items/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/trade_items/_index/_index_tr.html.erb
@@ -3,7 +3,7 @@
   <td>
     <div data-show-target="item" style="visibility: hidden">
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-solid fa-circle-info has-text-primary"></i>
+        <i class="fa-solid fa-circle-info has-text-info"></i>
       <% end %>
       <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { turbo_confirm: t('.confirm') }, aria: { label: t('.print') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-print has-text-success"></i>
