--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -38,7 +38,7 @@
       <span><%= @production.upstream.organ.name %></span>
     </p>
     <% end %>
-    <p><%= @production.product.description %></p>
+    <div><%= simple_format @production.product.description %></div>
   </div>
 </div>
 
