--- a/app/views/factory/productions/_show/_cart.html.erb
+++ b/app/views/factory/productions/_show/_cart.html.erb
@@ -31,7 +31,7 @@
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
   <%= f.hidden_field :station_id, value: params[:station_id] %>
   <%= f.hidden_field :desk_id, value: params[:desk_id] %>
-  <%= button_tag class: 'button is-small is-warning' do %>
+  <%= button_tag class: 'button is-small is-warning is-radius' do %>
     <i class="fa-solid fa-cart-plus"></i>
     <span class="pl-1">加入购物车</span>
   <% end %>
