--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -12,17 +12,15 @@
     <%= image_tag 'wx_moment.svg', class: 'image is-16x16' %>
     <span class="pl-1">分享</span>
   </div>
-  <% if @cart %>
-  <div>
+  <div class="is-flex">
     <div class="has-inline-centered">
       <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items' } %>
     </div>
-    <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'button is-small is-primary is-radius') do %>
-      <span class="pr-1"><%= t('trade.my.carts.show.title') %></span>
-      <i class="fa-solid fa-angle-right"></i>
-    <% end %>
+    <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'weui-tabbar__item') do %>
+      <i class="fa-solid fa-angle-right weui-tabbar__icon"></i>
+      <span class="weui-tabbar__label"><%= t('trade.my.carts.show.title') %></span>
+    <% end if @cart %>
   </div>
-  <% end %>
 </div>
 <div
   data-controller="mask"
