--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -16,9 +16,9 @@
     <div class="has-inline-centered">
       <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items' } %>
     </div>
-    <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'weui-tabbar__item') do %>
-      <i class="fa-solid fa-angle-right weui-tabbar__icon"></i>
-      <span class="weui-tabbar__label"><%= t('trade.my.carts.show.title') %></span>
+    <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'has-block-centered px-2') do %>
+      <i class="fa-solid fa-xl fa-cart-shopping"></i>
+      <span class="is-size-7 pt-1 has-text-grey"><%= t('trade.my.carts.show.title') %></span>
     <% end if @cart %>
   </div>
 </div>
