--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -1,25 +1,27 @@
 <div class="has-block-space-around has-background-grey-lighter is-safe-bottom m-0 py-3" style="z-index: 500">
-  <div
-    class="button is-small is-light is-radius"
-    data-controller="mask wx-share"
-    data-mask-id-value="mask"
-    data-wx-share-title-value="<%= @production.name %>"
-    data-wx-share-desc-value="<%= @production.product.description %>>"
-    data-wx-share-link-value="<%= url_for(controller: '/factory/productions', action: 'show', id: @production.id, only_path: false) %>"
-    data-wx-share-image-value="<%= @production.logo.url %>"
-    data-action="click->mask#show click->wx-share#ready"
-  >
-    <%= image_tag 'wx_moment.svg', class: 'image is-16x16' %>
-    <span class="pl-1">分享</span>
+  <div>
+    <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'has-block-centered px-2') do %>
+      <i class="fa-solid fa-cart-shopping"></i>
+      <span class="is-size-7 pt-1 has-text-grey"><%= t('trade.my.carts.show.title') %></span>
+    <% end if @cart %>
   </div>
-  <div class="is-flex">
+  <div class="has-v-centered">
     <div class="has-inline-centered">
       <%= render partial: 'cart', locals: { model: @production, item_con: 'trade/my/items' } %>
     </div>
-    <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'has-block-centered px-2') do %>
-      <i class="fa-solid fa-xl fa-cart-shopping"></i>
-      <span class="is-size-7 pt-1 has-text-grey"><%= t('trade.my.carts.show.title') %></span>
-    <% end if @cart %>
+    <div
+      class="button is-small is-light is-radius ml-2"
+      data-controller="mask wx-share"
+      data-mask-id-value="mask"
+      data-wx-share-title-value="<%= @production.name %>"
+      data-wx-share-desc-value="<%= @production.product.description %>>"
+      data-wx-share-link-value="<%= url_for(controller: '/factory/productions', action: 'show', id: @production.id, only_path: false) %>"
+      data-wx-share-image-value="<%= @production.logo.url %>"
+      data-action="click->mask#show click->wx-share#ready"
+    >
+      <%= image_tag 'wx_moment.svg', class: 'image is-16x16' %>
+      <span class="pl-1">分享</span>
+    </div>
   </div>
 </div>
 <div
