--- a/app/views/factory/admin/products/_spe/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_spe/_index_thead.html.erb
@@ -11,4 +11,5 @@
   <p><%= Factory::Product.human_attribute_name(:brand_id) %></p>
   <p><%= Factory::Product.human_attribute_name(:serial_id) %></p>
 </th>
+<th><%= Factory::Product.human_attribute_name(:specialty) %></th>
 <th></th>
