--- a/app/views/factory/admin/products/_spe/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_spe/_index_tbody.html.erb
@@ -16,6 +16,12 @@
   <p><%= model.brand&.name %></p>
 </td>
 <td>
+  <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
+    <%= f.check_box :specialty, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
+    <label data-action="click->input#check"></label>
+  <% end %>
+</td>
+<td>
   <% model.product_part_taxons.each do |product_part_taxon| %>
     <p>
       <span><%= product_part_taxon.name %></span>
