--- a/app/views/factory/in/provides/_index/_index_tbody.html.erb
+++ b/app/views/factory/in/provides/_index/_index_tbody.html.erb
@@ -10,3 +10,4 @@
     <span class="pl-1">移除供应商</span>
   <% end %>
 </td>
+<td><time data-controller="time"><%= model.created_at.to_fs(:iso8601) %></time></td>
