sep all and index

--- a/app/views/factory/admin/product_taxons/index.html.erb
+++ b/app/views/factory/admin/product_taxons/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'button' %>
+
 <%= render layout: 'index_table' do %>
   <% @product_taxons.group_by(&:factory_taxon).each do |taxon, product_taxons| %>
     <%= render partial: 'taxon_tbody', locals: { taxon: taxon, size: product_taxons.size + 1 } if taxon %>
